Fixed responsiveness on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body,
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  min-width: 650px;
+  min-width: 400px;
 }
 
 .content {
