--- a/src/scenes/global/Topbar/Topbar.css
+++ b/src/scenes/global/Topbar/Topbar.css
@@ -12,7 +12,7 @@
   border-radius: 3px;
   margin-top: 10px;
   margin-left: 5px;
-  justify-content: space-around;
+  justify-content: space-evenly;
   padding: 8px 12px;
   width: 100%;
 }
